# scb-scan-gsm-api

./: pyproject.toml
.github/: deploiements.yml
.github/workflows/: deploiements.yml
docs/: models.puml  usecase.puml
scb_gsm_scan/: .env  db.sqlite3  manage.py  requirements.txt
scb_gsm_scan/auths/: admin.py  authentification.py  models.py  serializers.py  tests.py  urls.py  views.py
scb_gsm_scan/auths/migrations/: 0001_initial.py  0002_user_id_alter_user_email.py  0003_alter_role_options_alter_role_unique_together.py  0004_user_first_name_user_last_name.py  0005_alter_user_first_name_alter_user_last_name.py  0006_alter_user_roles.py  0007_alter_user_user_permissions.py
scb_gsm_scan/gsm_coverage/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
scb_gsm_scan/gsm_coverage/csv/: test_T90Uybl.csv  test_awXnbCV.csv
scb_gsm_scan/gsm_coverage/migrations/: 0001_initial.py  0002_gsmdata.py  0003_alter_gsmdata_options_and_more.py  0004_rename_gsm_data_gsmdata_gsm_scan_and_more.py  0005_rename_cvs_line_gsmscan_csv_lines.py
scb_gsm_scan/gsm_coverage/tests/files/: test_failure.csv
scb_gsm_scan/scb_gsm_scan/: asgi.py  mixins.py  settings.py  urls.py  utils.py  wsgi.py
